pp2/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VariableDecl
    5     | FunctionDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VariableDecl: Type T_Identifier ';'

    9 FunctionDecl: Type T_Identifier '(' Formals ')' StmtBlock
   10             | T_Void T_Identifier '(' Formals ')' StmtBlock

   11 ClassDecl: T_Class T_Identifier Extends Implement '{' Fields '}'

   12 Fields: Fields Field
   13       | %empty

   14 Field: VariableDecl
   15      | FunctionDecl

   16 Extends: T_Extends T_Identifier
   17        | %empty

   18 Implement: T_Implements Impts
   19          | %empty

   20 Impts: Impts ',' T_Identifier
   21      | T_Identifier

   22 InterfaceDecl: T_Interface T_Identifier '{' ProtoTypes '}'

   23 ProtoTypes: ProtoTypes ProtoType
   24           | %empty

   25 ProtoType: Type T_Identifier '(' Formals ')' ';'
   26          | T_Void T_Identifier '(' Formals ')' ';'

   27 Type: T_Int
   28     | T_Double
   29     | T_Bool
   30     | T_String
   31     | T_Identifier
   32     | Type T_Dims

   33 Formals: ArgList
   34        | %empty

   35 ArgList: ArgList ',' Type T_Identifier
   36        | Type T_Identifier

   37 StmtBlock: '{' VarDeclList StmtList '}'

   38 StmtList: Stmt StmtList
   39         | %empty

   40 Stmt: _Expr ';'
   41     | IfStmt
   42     | WhileStmt
   43     | ForStmt
   44     | BreakStmt
   45     | ReturnStmt
   46     | PrintStmt
   47     | StmtBlock
   48     | SwitchStmt

   49 _Expr: Expr
   50      | %empty

   51 VarDeclList: VarDeclList VariableDecl
   52            | %empty

   53 IfStmt: T_If '(' Expr ')' Stmt elseStmt

   54 elseStmt: T_Else Stmt
   55         | %empty

   56 WhileStmt: T_While '(' Expr ')' Stmt

   57 ForStmt: T_For '(' _Expr ';' Expr ';' _Expr ')' Stmt

   58 SwitchStmt: T_Switch '(' Expr ')' '{' CaseList DefaultStmt '}'
   59           | T_Switch '(' Expr ')' '{' CaseList '}'

   60 CaseList: CaseList CaseStmt
   61         | CaseStmt

   62 CaseStmt: T_Case Constant ':' StmtList

   63 DefaultStmt: T_Default ':' StmtList

   64 BreakStmt: T_Break ';'

   65 ReturnStmt: T_Return _Expr ';'

   66 PrintStmt: T_Print '(' ExprList ')' ';'

   67 Expr: LValue '=' Expr
   68     | LValue T_PostPlus
   69     | LValue T_PostMinus
   70     | Constant
   71     | LValue
   72     | T_This
   73     | Call
   74     | '(' Expr ')'
   75     | Expr '+' Expr
   76     | Expr '-' Expr
   77     | Expr '*' Expr
   78     | Expr '/' Expr
   79     | Expr '%' Expr
   80     | '-' Expr
   81     | Expr '<' Expr
   82     | Expr T_LessEqual Expr
   83     | Expr '>' Expr
   84     | Expr T_GreaterEqual Expr
   85     | Expr T_Equal Expr
   86     | Expr T_NotEqual Expr
   87     | Expr T_And Expr
   88     | Expr T_Or Expr
   89     | '!' Expr
   90     | T_ReadInteger '(' ')'
   91     | T_ReadLine '(' ')'
   92     | T_New T_Identifier
   93     | T_NewArray '(' Expr ',' Type ')'

   94 ExprList: ExprList ',' Expr
   95         | Expr

   96 LValue: T_Identifier
   97       | Expr '.' T_Identifier
   98       | Expr '[' Expr ']'

   99 Call: T_Identifier '(' Actuals ')'
  100     | Expr '.' T_Identifier '(' Actuals ')'

  101 Actuals: ExprList
  102        | %empty

  103 Constant: T_IntConstant
  104         | T_BoolConstant
  105         | T_DoubleConstant
  106         | T_StringConstant
  107         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 89
'%' (37) 79
'(' (40) 9 10 25 26 53 56 57 58 59 66 74 90 91 93 99 100
')' (41) 9 10 25 26 53 56 57 58 59 66 74 90 91 93 99 100
'*' (42) 77
'+' (43) 75
',' (44) 20 35 93 94
'-' (45) 76 80
'.' (46) 97 100
'/' (47) 78
':' (58) 62 63
';' (59) 8 25 26 40 57 64 65 66
'<' (60) 81
'=' (61) 67
'>' (62) 83
'[' (91) 98
']' (93) 98
'{' (123) 11 22 37 58 59
'}' (125) 11 22 37 58 59
error (256)
T_Void (258) 10 26
T_Bool (259) 29
T_Int (260) 27
T_Double (261) 28
T_String (262) 30
T_Class (263) 11
T_LessEqual (264) 82
T_GreaterEqual (265) 84
T_Equal (266) 85
T_NotEqual (267) 86
T_Dims (268) 32
T_PostPlus (269) 68
T_PostMinus (270) 69
T_And (271) 87
T_Or (272) 88
T_Null (273) 107
T_Extends (274) 16
T_This (275) 72
T_Interface (276) 22
T_Implements (277) 18
T_While (278) 56
T_For (279) 57
T_If (280) 53
T_Else (281) 54
T_Return (282) 65
T_Break (283) 64
T_Switch (284) 58 59
T_Case (285) 62
T_Default (286) 63
T_New (287) 92
T_NewArray (288) 93
T_Print (289) 66
T_ReadInteger (290) 90
T_ReadLine (291) 91
T_Identifier (292) 8 9 10 11 16 20 21 22 25 26 31 35 36 92 96 97 99
    100
T_StringConstant (293) 106
T_IntConstant (294) 103
T_DoubleConstant (295) 105
T_BoolConstant (296) 104
UMINUS (297)
NoElse (298)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
Program (64)
    on left: 1, on right: 0
DeclList (65)
    on left: 2 3, on right: 1 2
Decl (66)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (67)
    on left: 8, on right: 4 14 51
FunctionDecl (68)
    on left: 9 10, on right: 5 15
ClassDecl (69)
    on left: 11, on right: 6
Fields (70)
    on left: 12 13, on right: 11 12
Field (71)
    on left: 14 15, on right: 12
Extends (72)
    on left: 16 17, on right: 11
Implement (73)
    on left: 18 19, on right: 11
Impts (74)
    on left: 20 21, on right: 18 20
InterfaceDecl (75)
    on left: 22, on right: 7
ProtoTypes (76)
    on left: 23 24, on right: 22 23
ProtoType (77)
    on left: 25 26, on right: 23
Type (78)
    on left: 27 28 29 30 31 32, on right: 8 9 25 32 35 36 93
Formals (79)
    on left: 33 34, on right: 9 10 25 26
ArgList (80)
    on left: 35 36, on right: 33 35
StmtBlock (81)
    on left: 37, on right: 9 10 47
StmtList (82)
    on left: 38 39, on right: 37 38 62 63
Stmt (83)
    on left: 40 41 42 43 44 45 46 47 48, on right: 38 53 54 56 57
_Expr (84)
    on left: 49 50, on right: 40 57 65
VarDeclList (85)
    on left: 51 52, on right: 37 51
IfStmt (86)
    on left: 53, on right: 41
elseStmt (87)
    on left: 54 55, on right: 53
WhileStmt (88)
    on left: 56, on right: 42
ForStmt (89)
    on left: 57, on right: 43
SwitchStmt (90)
    on left: 58 59, on right: 48
CaseList (91)
    on left: 60 61, on right: 58 59 60
CaseStmt (92)
    on left: 62, on right: 60 61
DefaultStmt (93)
    on left: 63, on right: 58
BreakStmt (94)
    on left: 64, on right: 44
ReturnStmt (95)
    on left: 65, on right: 45
PrintStmt (96)
    on left: 66, on right: 46
Expr (97)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90 91 92 93, on right: 49 53 56 57 58 59 67 74 75
    76 77 78 79 80 81 82 83 84 85 86 87 88 89 93 94 95 97 98 100
ExprList (98)
    on left: 94 95, on right: 66 94 101
LValue (99)
    on left: 96 97 98, on right: 67 68 69 71
Call (100)
    on left: 99 100, on right: 73
Actuals (101)
    on left: 101 102, on right: 99 100
Constant (102)
    on left: 103 104 105 106 107, on right: 62 70


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VariableDecl   go to state 12
    FunctionDecl   go to state 13
    ClassDecl      go to state 14
    InterfaceDecl  go to state 15
    Type           go to state 16


State 1

   10 FunctionDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 17


State 2

   29 Type: T_Bool .

    $default  reduce using rule 29 (Type)


State 3

   27 Type: T_Int .

    $default  reduce using rule 27 (Type)


State 4

   28 Type: T_Double .

    $default  reduce using rule 28 (Type)


State 5

   30 Type: T_String .

    $default  reduce using rule 30 (Type)


State 6

   11 ClassDecl: T_Class . T_Identifier Extends Implement '{' Fields '}'

    T_Identifier  shift, and go to state 18


State 7

   22 InterfaceDecl: T_Interface . T_Identifier '{' ProtoTypes '}'

    T_Identifier  shift, and go to state 19


State 8

   31 Type: T_Identifier .

    $default  reduce using rule 31 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 21
    VariableDecl   go to state 12
    FunctionDecl   go to state 13
    ClassDecl      go to state 14
    InterfaceDecl  go to state 15
    Type           go to state 16


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 13

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


State 14

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 15

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 16

    8 VariableDecl: Type . T_Identifier ';'
    9 FunctionDecl: Type . T_Identifier '(' Formals ')' StmtBlock
   32 Type: Type . T_Dims

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 23


State 17

   10 FunctionDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 24


State 18

   11 ClassDecl: T_Class T_Identifier . Extends Implement '{' Fields '}'

    T_Extends  shift, and go to state 25

    $default  reduce using rule 17 (Extends)

    Extends  go to state 26


State 19

   22 InterfaceDecl: T_Interface T_Identifier . '{' ProtoTypes '}'

    '{'  shift, and go to state 27


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 22

   32 Type: Type T_Dims .

    $default  reduce using rule 32 (Type)


State 23

    8 VariableDecl: Type T_Identifier . ';'
    9 FunctionDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    ';'  shift, and go to state 28
    '('  shift, and go to state 29


State 24

   10 FunctionDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 34 (Formals)

    Type     go to state 30
    Formals  go to state 31
    ArgList  go to state 32


State 25

   16 Extends: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 33


State 26

   11 ClassDecl: T_Class T_Identifier Extends . Implement '{' Fields '}'

    T_Implements  shift, and go to state 34

    $default  reduce using rule 19 (Implement)

    Implement  go to state 35


State 27

   22 InterfaceDecl: T_Interface T_Identifier '{' . ProtoTypes '}'

    $default  reduce using rule 24 (ProtoTypes)

    ProtoTypes  go to state 36


State 28

    8 VariableDecl: Type T_Identifier ';' .

    $default  reduce using rule 8 (VariableDecl)


State 29

    9 FunctionDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 34 (Formals)

    Type     go to state 30
    Formals  go to state 37
    ArgList  go to state 32


State 30

   32 Type: Type . T_Dims
   36 ArgList: Type . T_Identifier

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 38


State 31

   10 FunctionDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 39


State 32

   33 Formals: ArgList .
   35 ArgList: ArgList . ',' Type T_Identifier

    ','  shift, and go to state 40

    $default  reduce using rule 33 (Formals)


State 33

   16 Extends: T_Extends T_Identifier .

    $default  reduce using rule 16 (Extends)


State 34

   18 Implement: T_Implements . Impts

    T_Identifier  shift, and go to state 41

    Impts  go to state 42


State 35

   11 ClassDecl: T_Class T_Identifier Extends Implement . '{' Fields '}'

    '{'  shift, and go to state 43


State 36

   22 InterfaceDecl: T_Interface T_Identifier '{' ProtoTypes . '}'
   23 ProtoTypes: ProtoTypes . ProtoType

    T_Void        shift, and go to state 44
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 45

    ProtoType  go to state 46
    Type       go to state 47


State 37

    9 FunctionDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 48


State 38

   36 ArgList: Type T_Identifier .

    $default  reduce using rule 36 (ArgList)


State 39

   10 FunctionDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 49

    StmtBlock  go to state 50


State 40

   35 ArgList: ArgList ',' . Type T_Identifier

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Type  go to state 51


State 41

   21 Impts: T_Identifier .

    $default  reduce using rule 21 (Impts)


State 42

   18 Implement: T_Implements Impts .
   20 Impts: Impts . ',' T_Identifier

    ','  shift, and go to state 52

    $default  reduce using rule 18 (Implement)


State 43

   11 ClassDecl: T_Class T_Identifier Extends Implement '{' . Fields '}'

    $default  reduce using rule 13 (Fields)

    Fields  go to state 53


State 44

   26 ProtoType: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 54


State 45

   22 InterfaceDecl: T_Interface T_Identifier '{' ProtoTypes '}' .

    $default  reduce using rule 22 (InterfaceDecl)


State 46

   23 ProtoTypes: ProtoTypes ProtoType .

    $default  reduce using rule 23 (ProtoTypes)


State 47

   25 ProtoType: Type . T_Identifier '(' Formals ')' ';'
   32 Type: Type . T_Dims

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 55


State 48

    9 FunctionDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 49

    StmtBlock  go to state 56


State 49

   37 StmtBlock: '{' . VarDeclList StmtList '}'

    $default  reduce using rule 52 (VarDeclList)

    VarDeclList  go to state 57


State 50

   10 FunctionDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 10 (FunctionDecl)


State 51

   32 Type: Type . T_Dims
   35 ArgList: ArgList ',' Type . T_Identifier

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 58


State 52

   20 Impts: Impts ',' . T_Identifier

    T_Identifier  shift, and go to state 59


State 53

   11 ClassDecl: T_Class T_Identifier Extends Implement '{' Fields . '}'
   12 Fields: Fields . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 60

    VariableDecl  go to state 61
    FunctionDecl  go to state 62
    Field         go to state 63
    Type          go to state 16


State 54

   26 ProtoType: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 64


State 55

   25 ProtoType: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 65


State 56

    9 FunctionDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 9 (FunctionDecl)


State 57

   37 StmtBlock: '{' VarDeclList . StmtList '}'
   51 VarDeclList: VarDeclList . VariableDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_While           shift, and go to state 68
    T_For             shift, and go to state 69
    T_If              shift, and go to state 70
    T_Return          shift, and go to state 71
    T_Break           shift, and go to state 72
    T_Switch          shift, and go to state 73
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_Print           shift, and go to state 76
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 79
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86
    '{'               shift, and go to state 49

    ';'       reduce using rule 50 (_Expr)
    $default  reduce using rule 39 (StmtList)

    VariableDecl  go to state 87
    Type          go to state 88
    StmtBlock     go to state 89
    StmtList      go to state 90
    Stmt          go to state 91
    _Expr         go to state 92
    IfStmt        go to state 93
    WhileStmt     go to state 94
    ForStmt       go to state 95
    SwitchStmt    go to state 96
    BreakStmt     go to state 97
    ReturnStmt    go to state 98
    PrintStmt     go to state 99
    Expr          go to state 100
    LValue        go to state 101
    Call          go to state 102
    Constant      go to state 103


State 58

   35 ArgList: ArgList ',' Type T_Identifier .

    $default  reduce using rule 35 (ArgList)


State 59

   20 Impts: Impts ',' T_Identifier .

    $default  reduce using rule 20 (Impts)


State 60

   11 ClassDecl: T_Class T_Identifier Extends Implement '{' Fields '}' .

    $default  reduce using rule 11 (ClassDecl)


State 61

   14 Field: VariableDecl .

    $default  reduce using rule 14 (Field)


State 62

   15 Field: FunctionDecl .

    $default  reduce using rule 15 (Field)


State 63

   12 Fields: Fields Field .

    $default  reduce using rule 12 (Fields)


State 64

   26 ProtoType: T_Void T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 34 (Formals)

    Type     go to state 30
    Formals  go to state 104
    ArgList  go to state 32


State 65

   25 ProtoType: Type T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 34 (Formals)

    Type     go to state 30
    Formals  go to state 105
    ArgList  go to state 32


State 66

  107 Constant: T_Null .

    $default  reduce using rule 107 (Constant)


State 67

   72 Expr: T_This .

    $default  reduce using rule 72 (Expr)


State 68

   56 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 106


State 69

   57 ForStmt: T_For . '(' _Expr ';' Expr ';' _Expr ')' Stmt

    '('  shift, and go to state 107


State 70

   53 IfStmt: T_If . '(' Expr ')' Stmt elseStmt

    '('  shift, and go to state 108


State 71

   65 ReturnStmt: T_Return . _Expr ';'

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    $default  reduce using rule 50 (_Expr)

    _Expr     go to state 110
    Expr      go to state 100
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 72

   64 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 111


State 73

   58 SwitchStmt: T_Switch . '(' Expr ')' '{' CaseList DefaultStmt '}'
   59           | T_Switch . '(' Expr ')' '{' CaseList '}'

    '('  shift, and go to state 112


State 74

   92 Expr: T_New . T_Identifier

    T_Identifier  shift, and go to state 113


State 75

   93 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 114


State 76

   66 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 115


State 77

   90 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 116


State 78

   91 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 117


State 79

   31 Type: T_Identifier .
   96 LValue: T_Identifier .
   99 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 118

    T_Dims        reduce using rule 31 (Type)
    T_Identifier  reduce using rule 31 (Type)
    $default      reduce using rule 96 (LValue)


State 80

  106 Constant: T_StringConstant .

    $default  reduce using rule 106 (Constant)


State 81

  103 Constant: T_IntConstant .

    $default  reduce using rule 103 (Constant)


State 82

  105 Constant: T_DoubleConstant .

    $default  reduce using rule 105 (Constant)


State 83

  104 Constant: T_BoolConstant .

    $default  reduce using rule 104 (Constant)


State 84

   80 Expr: '-' . Expr

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 119
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 85

   89 Expr: '!' . Expr

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 120
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 86

   74 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 121
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 87

   51 VarDeclList: VarDeclList VariableDecl .

    $default  reduce using rule 51 (VarDeclList)


State 88

    8 VariableDecl: Type . T_Identifier ';'
   32 Type: Type . T_Dims

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 122


State 89

   47 Stmt: StmtBlock .

    $default  reduce using rule 47 (Stmt)


State 90

   37 StmtBlock: '{' VarDeclList StmtList . '}'

    '}'  shift, and go to state 123


State 91

   38 StmtList: Stmt . StmtList

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_While           shift, and go to state 68
    T_For             shift, and go to state 69
    T_If              shift, and go to state 70
    T_Return          shift, and go to state 71
    T_Break           shift, and go to state 72
    T_Switch          shift, and go to state 73
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_Print           shift, and go to state 76
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86
    '{'               shift, and go to state 49

    ';'       reduce using rule 50 (_Expr)
    $default  reduce using rule 39 (StmtList)

    StmtBlock   go to state 89
    StmtList    go to state 124
    Stmt        go to state 91
    _Expr       go to state 92
    IfStmt      go to state 93
    WhileStmt   go to state 94
    ForStmt     go to state 95
    SwitchStmt  go to state 96
    BreakStmt   go to state 97
    ReturnStmt  go to state 98
    PrintStmt   go to state 99
    Expr        go to state 100
    LValue      go to state 101
    Call        go to state 102
    Constant    go to state 103


State 92

   40 Stmt: _Expr . ';'

    ';'  shift, and go to state 125


State 93

   41 Stmt: IfStmt .

    $default  reduce using rule 41 (Stmt)


State 94

   42 Stmt: WhileStmt .

    $default  reduce using rule 42 (Stmt)


State 95

   43 Stmt: ForStmt .

    $default  reduce using rule 43 (Stmt)


State 96

   48 Stmt: SwitchStmt .

    $default  reduce using rule 48 (Stmt)


State 97

   44 Stmt: BreakStmt .

    $default  reduce using rule 44 (Stmt)


State 98

   45 Stmt: ReturnStmt .

    $default  reduce using rule 45 (Stmt)


State 99

   46 Stmt: PrintStmt .

    $default  reduce using rule 46 (Stmt)


State 100

   49 _Expr: Expr .
   75 Expr: Expr . '+' Expr
   76     | Expr . '-' Expr
   77     | Expr . '*' Expr
   78     | Expr . '/' Expr
   79     | Expr . '%' Expr
   81     | Expr . '<' Expr
   82     | Expr . T_LessEqual Expr
   83     | Expr . '>' Expr
   84     | Expr . T_GreaterEqual Expr
   85     | Expr . T_Equal Expr
   86     | Expr . T_NotEqual Expr
   87     | Expr . T_And Expr
   88     | Expr . T_Or Expr
   97 LValue: Expr . '.' T_Identifier
   98       | Expr . '[' Expr ']'
  100 Call: Expr . '.' T_Identifier '(' Actuals ')'

    T_LessEqual     shift, and go to state 126
    T_GreaterEqual  shift, and go to state 127
    T_Equal         shift, and go to state 128
    T_NotEqual      shift, and go to state 129
    T_And           shift, and go to state 130
    T_Or            shift, and go to state 131
    '>'             shift, and go to state 132
    '<'             shift, and go to state 133
    '+'             shift, and go to state 134
    '-'             shift, and go to state 135
    '%'             shift, and go to state 136
    '/'             shift, and go to state 137
    '*'             shift, and go to state 138
    '.'             shift, and go to state 139
    '['             shift, and go to state 140

    $default  reduce using rule 49 (_Expr)


State 101

   67 Expr: LValue . '=' Expr
   68     | LValue . T_PostPlus
   69     | LValue . T_PostMinus
   71     | LValue .

    T_PostPlus   shift, and go to state 141
    T_PostMinus  shift, and go to state 142
    '='          shift, and go to state 143

    $default  reduce using rule 71 (Expr)


State 102

   73 Expr: Call .

    $default  reduce using rule 73 (Expr)


State 103

   70 Expr: Constant .

    $default  reduce using rule 70 (Expr)


State 104

   26 ProtoType: T_Void T_Identifier '(' Formals . ')' ';'

    ')'  shift, and go to state 144


State 105

   25 ProtoType: Type T_Identifier '(' Formals . ')' ';'

    ')'  shift, and go to state 145


State 106

   56 WhileStmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 146
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 107

   57 ForStmt: T_For '(' . _Expr ';' Expr ';' _Expr ')' Stmt

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    $default  reduce using rule 50 (_Expr)

    _Expr     go to state 147
    Expr      go to state 100
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 108

   53 IfStmt: T_If '(' . Expr ')' Stmt elseStmt

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 148
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 109

   96 LValue: T_Identifier .
   99 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 118

    $default  reduce using rule 96 (LValue)


State 110

   65 ReturnStmt: T_Return _Expr . ';'

    ';'  shift, and go to state 149


State 111

   64 BreakStmt: T_Break ';' .

    $default  reduce using rule 64 (BreakStmt)


State 112

   58 SwitchStmt: T_Switch '(' . Expr ')' '{' CaseList DefaultStmt '}'
   59           | T_Switch '(' . Expr ')' '{' CaseList '}'

    T_Null            shift, and go to state 66
    T_This            shift, and go to state 67
    T_New             shift, and go to state 74
    T_NewArray        shift, and go to state 75
    T_ReadInteger     shift, and go to state 77
    T_ReadLine        shift, and go to state 78
    T_Identifier      shift, and go to state 109
    T_StringConstant  shift, and go to state 80
    T_IntConstant     shift, and go to state 81
    T_DoubleConstant  shift, and go to state 82
    T_BoolConstant    shift, and go to state 83
    '-'               shift, and go to state 84
    '!'               shift, and go to state 85
    '('               shift, and go to state 86

    Expr      go to state 150
    LValue    go to state 101
    Call      go to state 102
    Constant  go to state 103


State 113

   92 Expr: T_New T_Identifier .

    $default  reduce using rule 92 (Expr)


State 114

   93 Expr: T_NewArray '(' . Expr ',' Type ')'
